5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1674_1100.log
== TEST (2019-04-25 11:17:40) 
-- CODE:
x=int(input("valor de uma cedula"))

if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print("tartaruga")
elif(x==5):
	print("garca")
elif(x==10):
	print("arara")
elif(x==20):
	print("mico-leao dourado")
elif(x==50):
	print("onca-pintada")
elif(x==100):
	print("garoupa")
	

-- OUTPUT:
garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:18:50) 
-- CODE:
x=int(input("valor de uma cedula"))

if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:19:07) 
-- CODE:
x=int(input("valor de uma cedula"))

if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	

-- EXECUTION TIME:
0.197927
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:19:53) 
-- CODE:
x=int(input("valor de uma cedula"))

if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	

-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:57) 
-- CODE:
x=int(input("valor de uma cedula"))

if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:21:10) 
-- CODE:
x=int(input("valor de uma cedula: "))

if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:21:20) 
-- CODE:
x=int(input("valor de uma cedula: "))

if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	

-- EXECUTION TIME:
0.154933
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:39) 
-- CODE:
x=int(input("valor de uma cedula: "))

if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print("Tartaruga")
elif(x==5):
	print("Garca")
elif(x==10):
	print("Arara")
elif(x==20):
	print("Mico-leao dourado")
elif(x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
	

-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:04) 
-- CODE:
x=int(input("valor de uma cedula: "))
y="Animal"
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- OUTPUT:
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:24) 
-- CODE:
x=int(input("valor de uma cedula: "))
y="Animal:"
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:24:35) 
-- CODE:
x=int(input("valor de uma cedula: "))
y="Animal:"
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- EXECUTION TIME:
0.176116
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:25) 
-- CODE:
x=int(input("Entrada: "))
y="Animal:"
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print("Animal: Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:01) 
-- CODE:
x=int(input("Entrada: "))
y="Animal:"
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(x,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:26:10) 
-- CODE:
x=int(input("Entrada: "))
y="Animal:"
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(x,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- EXECUTION TIME:
0.187546
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7 Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:28) 
-- CODE:
x=int(input("valor da cedula: "))
y="Animal:"
print(Entrada,x)
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(x,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Entrada,x)
NameError: name 'Entrada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:59) 
-- CODE:
x=int(input("valor da cedula: "))
y="Animal:"
print("Entrada:",x)
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(x,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:29:10) 
-- CODE:
x=int(input("valor da cedula: "))
y="Animal:"
print("Entrada:",x)
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(x,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- EXECUTION TIME:
0.181174
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
7 Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:29:19) 
-- CODE:
x=int(input("valor da cedula: "))
y="Animal:"
print("Entrada:",x)
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(x,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:30:52) 
-- CODE:
x=int(input("valor da cedula: "))
y="Animal:"
print("Entrada:",x)
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(y,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:31:03) 
-- CODE:
x=int(input("valor da cedula: "))
y="Animal:"
print("Entrada:",x)
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(y,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- EXECUTION TIME:
0.154751
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:39:52) 
-- CODE:
x=int(input("valor da cedula: "))
y="Animal:"
print("Entrada:",x)
if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	print(y,"Invalido")
elif(x==2):
	print(y,"Tartaruga")
elif(x==5):
	print(y,"Garca")
elif(x==10):
	print(y,"Arara")
elif(x==20):
	print(y,"Mico-leao dourado")
elif(x==50):
	print(y,"Onca-pintada")
elif(x==100):
	print(y,"Garoupa")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
